@@ -24,56 +24,51 @@
  */
 package com.nextbreakpoint.nextfractal.core.common;
 
+import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.logging.Logger;
 
-public class ClipProcessor {
-    private static final Logger logger = Logger.getLogger(ClipProcessor.class.getName());
+public class Animation {
+    private static final Logger logger = Logger.getLogger(Animation.class.getName());
 
-    public static final int FRAMES_PER_SECOND = 25;
+    private final List<AnimationClip> clips;
+    private final int frameCount;
+    private final int frameRate;
 
-    private List<Clip> clips;
-    private int frameCount;
-    private int frameRate;
-
-    public ClipProcessor(List<Clip> clips, int frameRate) {
-        this.clips = clips;
+    public Animation(List<AnimationClip> clips, int frameRate) {
+        this.clips = new ArrayList<>(clips);
         this.frameRate = frameRate;
-        long duration = clips.stream().mapToLong(clip -> clip.duration()).sum();
+        final long duration = clips.stream().mapToLong(AnimationClip::duration).sum();
         this.frameCount = computeFrameCount(0, duration, frameRate);
     }
 
-    private int computeFrameCount(double startTime, double stopTime, float frameRate) {
-        return (int) Math.floor((stopTime - startTime) / frameRate);
-    }
-
     public List<Frame> generateFrames() {
-        List<Frame> frames = new LinkedList<>();
-        if (clips.size() > 0 && clips.get(0).events().size() > 1) {
+        final List<Frame> frames = new LinkedList<>();
+        if (!clips.isEmpty() && clips.getFirst().events().size() > 1) {
             int currentClip = 0;
             int currentEvent = 0;
             float frameIndex = 0;
             float time = 0;
             float prevTime = 0;
-            ClipEvent event = clips.get(0).events().get(0);
+            AnimationEvent event = clips.getFirst().events().getFirst();
             long baseTime = event.date().getTime();
-            logger.fine("0) clip " + currentClip + ", event " + currentEvent);
             Frame lastFrame = null;
+            logger.fine("0) clip " + currentClip + ", event " + currentEvent);
             while (frameIndex < frameCount && currentClip < clips.size() && currentEvent < clips.get(currentClip).events().size()) {
                 currentEvent += 1;
                 while (currentClip < clips.size() && currentEvent >= clips.get(currentClip).events().size()) {
                     currentClip += 1;
                     currentEvent = 0;
                     if (currentClip < clips.size() && !clips.get(currentClip).events().isEmpty()) {
-                        baseTime = clips.get(currentClip).events().get(0).date().getTime();
+                        baseTime = clips.get(currentClip).events().getFirst().date().getTime();
                         prevTime = time;
                     }
                     lastFrame = null;
                 }
                 logger.fine("1) clip " + currentClip + ", event " + currentEvent);
                 if (currentClip < clips.size() && currentEvent < clips.get(currentClip).events().size()) {
-                    ClipEvent nextEvent = clips.get(currentClip).events().get(currentEvent);
+                    AnimationEvent nextEvent = clips.get(currentClip).events().get(currentEvent);
                     float frameTime = frameIndex / frameRate;
                     time = prevTime + (nextEvent.date().getTime() - baseTime) / 1000f;
                     while (frameTime - time < 0.01f) {
@@ -106,5 +101,9 @@ public class ClipProcessor {
         logger.fine("3) frame count " + frames.size() + ", frame rate " + frameRate + " fps");
         logger.info("Generated " + frames.size() + " frames");
         return frames;
+    }
+
+    private int computeFrameCount(double startTime, double stopTime, float frameRate) {
+        return (int) Math.floor((stopTime - startTime) / frameRate);
     }
 }
